--- a/content/posts/lions-mane-silicon-valley-nootropic.mdx
+++ b/content/posts/lions-mane-silicon-valley-nootropic.mdx
@@ -77,8 +77,8 @@ Not all Lion's Mane supplements work. Clinical-grade formulations should have:
 ✓ **1,000mg+ per serving** (matches research doses)  
 ✓ **Third-party tested** for heavy metals  
 
-## Source Documentation
+## Sources
 
-Access the original full-text paper for deeper clinical validation.
+Primary publication linked below.
 
 [Read Full Study →](https://pubmed.ncbi.nlm.nih.gov/38567890/)
