--- a/content/posts/silicon-valleys-200-month-memory-upgrade.mdx
+++ b/content/posts/silicon-valleys-200-month-memory-upgrade.mdx
@@ -27,3 +27,7 @@ If your calendar is full, your sleep is thin, and your decisions are expensive, 
 ## Sources
 
 1. [Primary study](https://pubmed.ncbi.nlm.nih.gov/25199822/)
+
+## Evidence Limits and What We Still Need
+
+These findings are promising, but current evidence is still limited by sample size, follow-up duration, and population selection. Larger randomized trials with longer monitoring are needed to clarify long-term safety, durability of benefit, and which patient profiles respond best.
