--- a/content/posts/spermidine-autophagy-cellular-renewal.mdx
+++ b/content/posts/spermidine-autophagy-cellular-renewal.mdx
@@ -145,8 +145,8 @@ The Nature Medicine trial is strong for cardiovascular benefits [1], but human l
 
 ## Sources
 
-[1] Eisenberg T, et al. (2016). 'Cardioprotection and lifespan extension by the natural polyamine spermidine.' *Nat Med*. PMID: 27841876. DOI: 10.1038/nm.4222
+[1] Eisenberg T, et al. (2016). "Cardioprotection and lifespan extension by the natural polyamine spermidine." *Nat Med*. PMID: 27841876. [PubMed](https://pubmed.ncbi.nlm.nih.gov/27841876/)
 
-[2] Madeo F, et al. (2018). 'Spermidine in health and disease.' *Science*. PMID: 29371426
+[2] Madeo F, et al. (2018). "Spermidine in health and disease." *Science*. PMID: 29371426. [PubMed](https://pubmed.ncbi.nlm.nih.gov/29371426/)
 
-[3] Schwarz C, et al. (2018). 'Safety and tolerability of spermidine supplementation in mice and older adults.' *Aging*. PMID: 30415657
+[3] Schwarz C, et al. (2018). "Safety and tolerability of spermidine supplementation in mice and older adults." *Aging*. PMID: 30415657. [PubMed](https://pubmed.ncbi.nlm.nih.gov/30415657/)
