--- a/content/posts/vitamin-d-immune-system-deficiency.mdx
+++ b/content/posts/vitamin-d-immune-system-deficiency.mdx
@@ -87,8 +87,8 @@ High-quality vitamin D supplements should have:
 ✓ **Oil-based** (enhances absorption)  
 ✓ **Third-party tested** (purity verification)
 
-## Source Documentation
+## Sources
 
-Access the original full-text paper for deeper clinical validation.
+Primary publication linked below.
 
 [Read Full Study →](https://pubmed.ncbi.nlm.nih.gov/40012345/)
