--- a/content/posts/nmn-brain-aging-reversal-study.mdx
+++ b/content/posts/nmn-brain-aging-reversal-study.mdx
@@ -72,3 +72,7 @@ The study used pharmaceutical-grade NMN at 300mg daily, taken in the morning on 
 ## Sources
 
 1. [Primary study](https://www.nature.com/articles/s41419-024-07062-1)
+
+## Evidence Limits and What We Still Need
+
+These findings are promising, but current evidence is still limited by sample size, follow-up duration, and population selection. Larger randomized trials with longer monitoring are needed to clarify long-term safety, durability of benefit, and which patient profiles respond best.
